Wed Nov 24 13:59:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
        * connectors/dds4ccm/tests/PSAT/DDS_PSAT_Connector_T.h:
          Added fixed argument for the sequence

Wed Nov 24 13:15:52 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/MultipleTemp/Connector/MultipleTemp_Connector.mpc:
          Removed some dummy labels

Wed Nov 24 09:06:35 UTC 2010  Marijke Hengstmengel  <mhengstmengelt@remedy.nl>

        * connectors/ami4ccm/tests/OneProcess/Sender/OneProcess_Sender_exec.cpp:
        * connectors/ami4ccm/tests/OneProcess/Sender/OneProcess_Sender_exec.h:
        * connectors/ami4ccm/tests/OneProcess/Sender/OneProcess_Sender.mpc:
        * connectors/ami4ccm/tests/OneProcess/descriptors/Plan.cdp:
        * connectors/ami4ccm/tests/OneProcess/Receiver/OneProcess_Receiver.mpc:
        * connectors/ami4ccm/tests/OneProcess/Receiver/OneProcess_Receiver_exec.cpp:
        * connectors/ami4ccm/tests/OneProcess/Receiver/OneProcess_Receiver_exec.h:
        * connectors/ami4ccm/tests/OneProcess/Base/OneProcess.mpc:
        * connectors/ami4ccm/tests/NoReplyH/Sender/NoReplyH_Sender_exec.cpp:
        * connectors/ami4ccm/tests/NoReplyH/Sender/NoReplyH_Sender_exec.h:
        * connectors/ami4ccm/tests/NoReplyH/Sender/NoReplyH_Sender.mpc:
        * connectors/ami4ccm/tests/NoReplyH/descriptors/Plan.cdp:
        * connectors/ami4ccm/tests/NoReplyH/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/NoReplyH/Receiver/NoReplyH_Receiver_exec.cpp:
        * connectors/ami4ccm/tests/NoReplyH/Receiver/NoReplyH_Receiver_exec.h:
        * connectors/ami4ccm/tests/OneReplyH/Sender/OneReplyH_Sender_exec.h:
        * connectors/ami4ccm/tests/OneReplyH/Sender/OneReplyH_Sender.mpc: